bpy.context.scene.frame_set() doesn't update marker cameras in viewports #70850

Closed
opened 2019-10-15 19:00:04 +02:00 by Sam Van Hulle · 5 comments

System Information
Operating system: Linux-5.0.0-31-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: Quadro RTX 5000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.56

Blender Version
Broken: version: 2.82 (sub 0), branch: master, commit date: 2019-10-11 23:26, hash: blender/blender@bde328352b
Worked: (optional)

Short description of error
When calling bpy.context.scene.frame_set() causes the playhead to pass a marker, the active camera switches in the UI, but viewports don't update until manually passing a marker again.

Exact steps for others to reproduce the error

  • Download the blendfile below.
  • Execute the script. The camera should switch to SH01.CAMERA.000, which happens everywhere but in the viewport.
    frame_set_camera_updating.blend
**System Information** Operating system: Linux-5.0.0-31-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: Quadro RTX 5000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.56 **Blender Version** Broken: version: 2.82 (sub 0), branch: master, commit date: 2019-10-11 23:26, hash: `blender/blender@bde328352b` Worked: (optional) **Short description of error** When calling `bpy.context.scene.frame_set()` causes the playhead to pass a marker, the active camera switches in the UI, but viewports don't update until manually passing a marker again. **Exact steps for others to reproduce the error** - Download the blendfile below. - Execute the script. The camera should switch to SH01.CAMERA.000, which happens everywhere but in the viewport. [frame_set_camera_updating.blend](https://archive.blender.org/developer/F7821212/frame_set_camera_updating.blend)
Author

Added subscriber: @frameshift

Added subscriber: @frameshift
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Confirmed, checking...

Confirmed, checking...
Campbell Barton self-assigned this 2019-10-16 10:04:32 +02:00

This issue was referenced by blender/blender@80f0bc99a9

This issue was referenced by blender/blender@80f0bc99a9831709338fdb252546829afdf4912a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#70850
No description provided.