Fix T70850: Scene.frame_set doesn't update camera from markers