source/blender/blenkernel/intern/scene.c
@@ -1008,19 +1008,19 @@ Object *BKE_scene_camera_switch_find(Scene *scene)
 }
 #endif
 
-int BKE_scene_camera_switch_update(Scene *scene)
+bool BKE_scene_camera_switch_update(Scene *scene)
 {
 #ifdef DURIAN_CAMERA_SWITCH
   Object *camera = BKE_scene_camera_switch_find(scene);
-  if (camera) {
+  if (camera && (camera != scene->camera)) {
     scene->camera = camera;
     DEG_id_tag_update(&scene->id, ID_RECALC_COPY_ON_WRITE);
-    return 1;
+    return true;
   }
 #else
   (void)scene;
 #endif
-  return 0;
+  return false;
 }
 
 char *BKE_scene_find_marker_name(Scene *scene, int frame)
